# monipy

./: LICENSE  README.md  enviroment.yml  pyproject.toml
data/: Detection.py  EventFilter.py  FeatureTable2.py  RRISection.py  Record2.py  Scaler.py  SeizureEvaluation.py
evalutations/: ECGlabeling.py  RRcorrect.py  compute_training_samples.py  model_evalution.py  reproducibility.py  run_data_correction.py  run_feature_comp.py
evalution_output_example/: example_logging_data.csv  test_summary.csv
model_weights/: model_weights_tf.npy
models/: BaseClassTF.py  Model.py  classifier_models.py
utils/: detection_utils.py  features.py  utils.py
